--- a/index.html
+++ b/index.html
@@ -4,4 +4,8 @@
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: home
 author_profile: true
+title: School Programs
+header:
+  overlay_image: /assets/images/header/apple-eye.jpg
+  overlay_filter: 0.5
 ---
