--- a/index.html
+++ b/index.html
@@ -8,4 +8,7 @@ title: School Programs
 header:
   overlay_image: /assets/images/header/apple-eye.jpg
   overlay_filter: 0.5
+actions:
+    - label: "About Me"
+      url: "/about/"
 ---
