--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
-author_profile: true
+layout: splash
+permalink: /
+hidden: true
+author_profile: false
 title: School Programs
 header:
   overlay_image: /assets/images/header/apple-eye.jpg
