--- a/index.html
+++ b/index.html
@@ -11,6 +11,5 @@ header:
       - label: "About Me"
         url: "/about/"
 excerpt:
-  Misi kami adalah membantu pengguna mempelajari pemrograman dengan lebih mudah.<br/>
-  <small>Kami adalah tim kecil yang terdiri dari pengembang yang bersemangat dan terus berupaya menciptakan sumber daya pemrograman yang akurat dan mudah dipahami.</small>
+  Misi kami adalah membantu pengguna mempelajari pemrograman dengan lebih mudah.
 ---
