--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@ header:
 excerpt:
   Misi kami adalah membantu pengguna mempelajari pemrograman dengan lebih mudah.
 intro: 
-  - excerpt: 'Kami adalah tim kecil yang terdiri dari pengembang yang bersemangat dan terus berupaya menciptakan sumber daya pemrograman yang akurat dan mudah dipahami.'
+  - excerpt: 'Kami adalah tim kecil yang terdiri dari pengembang yang bersemangat dan terus berupaya menciptakan sumber daya pemrograman yang akurat dan mudah dipahami.<br>Kami memahami bahwa membuat konten tekstual di web untuk mempelajari pemrograman saja tidak cukup, Untuk meningkatkan pengalaman belajar pengguna kami.'
 ---
+{% include feature_row id="intro" type="center" %}
