--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ excerpt:
 intro: 
   - excerpt: 'Kami adalah tim kecil yang terdiri dari pengembang yang bersemangat dan terus berupaya menciptakan sumber daya pemrograman yang akurat dan mudah dipahami.<br>Kami memahami bahwa membuat konten tekstual di web untuk mempelajari pemrograman saja tidak cukup, Untuk meningkatkan pengalaman belajar pengguna kami.'
 feature_row:
-  - image_path: /assets/images/blog.jpg
+  - image_path: /assets/images/learn.jpg
     alt: "customizable"
-    title: "Posts"
+    title: "Learn"
     excerpt: "Here I try to teach what I have learned and try to ask and answer interesting questions."
     url: "/posts/"
     btn_class: "btn--primary"
@@ -26,7 +26,7 @@ feature_row:
     alt: "fully responsive"
     title: "Journal"
     excerpt: "Journal Kosong"
-  - image_path: /assets/images/learn.jpg
+  - image_path: /assets/images/blog.jpg
     alt: "100% free"
     title: "Projects"
     excerpt: "Projects, resulting from whatever half baked ideas thrown into the oven at medium heat."
