--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 ---
-layout: splash
-permalink: /
-hidden: true
+layout: home
 author_profile: false
 title: Achieving Learning Success: Commitment, Perseverance, and Consistency
 header:
