--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: home
+permalink: /
 author_profile: false
 title: Achieving Learning Success: Commitment, Perseverance, and Consistency
 header:
