--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: home
+layout: splash
 permalink: /
 author_profile: false
 title: Achieving Learning Success: Commitment, Perseverance, and Consistency
