--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: splash
 permalink: /
+hidden: true
 author_profile: false
 title: Achieving Learning Success: Commitment, Perseverance, and Consistency
 header:
