--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: splash
 permalink: /
 hidden: true
 author_profile: false
-title: Achieving Learning Success: Commitment, Perseverance, and Consistency
+title: "Achieving Learning Success: Commitment, Perseverance, and Consistency"
 header:
   overlay_image: /assets/images/header/apple-eye.jpg
   overlay_filter: 0.5
