--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ excerpt:
   Misi kami adalah membantu pengguna mempelajari pemrograman dengan lebih mudah.
 intro: 
   - excerpt: 'Kami adalah tim kecil yang terdiri dari pengembang yang bersemangat dan terus berupaya menciptakan sumber daya pemrograman yang akurat dan mudah dipahami.<br>Kami memahami bahwa membuat konten tekstual di web untuk mempelajari pemrograman saja tidak cukup, Untuk meningkatkan pengalaman belajar pengguna kami.'
+intro2: 
+  - excerpt: 'mang ea?'
 feature_row:
   - image_path: /assets/images/learn.jpg
     alt: "customizable"
@@ -34,3 +36,5 @@ feature_row:
 {% include feature_row id="intro" type="center" %}
 
 {% include feature_row %}
+
+{% include feature_row id="intro2" type="center" %}
