--- a/index.html
+++ b/index.html
@@ -32,9 +32,16 @@ feature_row:
     alt: "100% free"
     title: "Projects"
     excerpt: "Projects, resulting from whatever half baked ideas thrown into the oven at medium heat."
+feature_row2:
+  - image_path: /assets/images/Onlineworld.gif
+    alt: "Online"
+    title: "Belajar aja "
+    excerpt: 'gk usah tengil'
 ---
 {% include feature_row id="intro" type="center" %}
 
 {% include feature_row %}
 
 {% include feature_row id="intro2" type="center" %}
+
+{% include feature_row id="feature_row2" type="left" %}
