--- a/index.html
+++ b/index.html
@@ -33,10 +33,20 @@ feature_row:
     title: "Projects"
     excerpt: "Projects, resulting from whatever half baked ideas thrown into the oven at medium heat."
 feature_row2:
-  - image_path: /assets/images/Onlineworld.gif
-    alt: "Online"
-    title: "Belajar aja "
-    excerpt: 'gk usah tengil'
+  - image_path: /assets/images/edu.png
+    alt: "Easy"
+    title: "Programming made easy"
+    excerpt: 'Kami fokus pada kesederhanaan. Tutorial dan contoh pemrograman ditulis dalam bahasa yang sederhana dan mudah dimengerti oleh pemula.'
+feature_row3:
+  - image_path: /assets/images/trust.png
+    alt: "Content"
+    title: "Content You Can Trust"
+    excerpt: 'Sekelompok ahli berdedikasi terus bekerja untuk menciptakan sumber daya pemrograman yang akurat dan mudah dipahami.'
+feature_row4:
+  - image_path: /assets/images/doing.png
+    alt: "Learn"
+    title: "Learn by Doing"
+    excerpt: 'Satu-satunya cara untuk belajar memprogram adalah dengan menulis kode. Kami menyediakan banyak contoh lengkap sehingga Anda dapat menjalankan dan mengedit kode sendiri.'
 ---
 {% include feature_row id="intro" type="center" %}
 
@@ -45,3 +55,7 @@ feature_row2:
 {% include feature_row id="intro2" type="center" %}
 
 {% include feature_row id="feature_row2" type="left" %}
+
+{% include feature_row id="feature_row3" type="right" %}
+
+{% include feature_row id="feature_row4" type="left" %}
