--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ excerpt:
 intro: 
   - excerpt: 'Kami adalah tim kecil yang terdiri dari pengembang yang bersemangat dan terus berupaya menciptakan sumber daya pemrograman yang akurat dan mudah dipahami.<br>Kami memahami bahwa membuat konten tekstual di web untuk mempelajari pemrograman saja tidak cukup, Untuk meningkatkan pengalaman belajar pengguna kami.'
 intro2: 
-  - excerpt: 'mang ea?'
+  - excerpt: 'Kami memahami bahwa membuat konten tekstual di web untuk mempelajari pemrograman saja tidak cukup, Untuk meningkatkan pengalaman belajar pengguna kami.'
 feature_row:
   - image_path: /assets/images/learn.jpg
     alt: "customizable"
