--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@ feature_row:
     alt: "100% free"
     title: "Projects"
     excerpt: "Projects, resulting from whatever half baked ideas thrown into the oven at medium heat."
+feature_row1:
+  - image_path: /assets/images/think.png
+    alt: "School Programs"
+    title: "School Programs"
+    excerpt: "Let us think of education as the means of developing our greatest abilities, because in each of us there is a private hope and dream which, fulfilled, can be translated into benefit for everyone and greater strength for our nation. (John F. Kennedy)"
 feature_row2:
   - image_path: /assets/images/edu.png
     alt: "Easy"
@@ -50,7 +55,7 @@ feature_row4:
 ---
 {% include feature_row id="intro" type="center" %}
 
-{% include feature_row %}
+{% include feature_row id="feature_row1" type="center" %}
 
 {% include feature_row id="intro2" type="center" %}
 
@@ -59,3 +64,5 @@ feature_row4:
 {% include feature_row id="feature_row3" type="right" %}
 
 {% include feature_row id="feature_row4" type="left" %}
+
+{% include feature_row %}
