--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@ intro:
 feature_row:
   - image_path: /assets/images/learn.jpg
     alt: "customizable"
-    title: "Learn"
+    title: "Learns"
     excerpt: "Here I try to teach what I have learned and try to ask and answer interesting questions."
-    url: "/posts/"
+    url: "/categories/#learn/"
     btn_class: "btn--primary"
-    btn_label: "Read More"
+    btn_label: "Learn More"
   - image_path: /assets/images/journal.jpg
+    url: "/categories/#article/"
     alt: "fully responsive"
-    title: "Journal"
-    excerpt: "Journal Kosong"
+    title: "Articles"
+    excerpt: "Artikel bertujuan memberikan informasi yang berguna kepada pembaca. Informasi tersebut bisa berupa berita terbaru, pengetahuan tentang suatu topik, panduan, atau analisis."
+    btn_class: "btn--primary"
+    btn_label: "Article More"
   - image_path: /assets/images/blog.jpg
     alt: "100% free"
     title: "Projects"
