--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: splash
 permalink: /
 hidden: true
 author_profile: false
+related: true
 title: "Achieving Learning Success: Commitment, Perseverance, and Consistency"
 header:
   overlay_image: /assets/images/header/apple-eye.jpg
