--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ feature_row:
     title: "Projects"
     excerpt: "Projects, resulting from whatever half baked ideas thrown into the oven at medium heat."
 feature_row1:
-  - image_path: /assets/images/think.png
+  - image_path: /assets/images/Learning-amico.png
     alt: "School Programs"
     title: "School Programs"
     excerpt: "Let us think of education as the means of developing our greatest abilities, because in each of us there is a private hope and dream which, fulfilled, can be translated into benefit for everyone and greater strength for our nation. (John F. Kennedy)"
