--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ feature_row1:
     title: "School Programs"
     excerpt: "Let us think of education as the means of developing our greatest abilities, because in each of us there is a private hope and dream which, fulfilled, can be translated into benefit for everyone and greater strength for our nation. (John F. Kennedy)"
 feature_row2:
-  - image_path: /assets/images/edu.png
+  - image_path: /assets/images/Learning-amico.png
     alt: "Easy"
     title: "Programming made easy"
     excerpt: 'Kami fokus pada kesederhanaan. Tutorial dan contoh pemrograman ditulis dalam bahasa yang sederhana dan mudah dimengerti oleh pemula.'
