--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@ feature_row1:
     title: "School Programs"
     excerpt: "Let us think of education as the means of developing our greatest abilities, because in each of us there is a private hope and dream which, fulfilled, can be translated into benefit for everyone and greater strength for our nation. (John F. Kennedy)"
 feature_row2:
-  - image_path: /assets/images/Learning-amico.png
+  - image_path: /assets/images/learn.png
     alt: "Easy"
     title: "Programming made easy"
     excerpt: 'Kami fokus pada kesederhanaan. Tutorial dan contoh pemrograman ditulis dalam bahasa yang sederhana dan mudah dimengerti oleh pemula.'
 feature_row3:
-  - image_path: /assets/images/trust.png
+  - image_path: /assets/images/trustt.png
     alt: "Content"
     title: "Content You Can Trust"
     excerpt: 'Sekelompok ahli berdedikasi terus bekerja untuk menciptakan sumber daya pemrograman yang akurat dan mudah dipahami.'
 feature_row4:
-  - image_path: /assets/images/doing.png
+  - image_path: /assets/images/program.png
     alt: "Learn"
     title: "Learn by Doing"
     excerpt: 'Satu-satunya cara untuk belajar memprogram adalah dengan menulis kode. Kami menyediakan banyak contoh lengkap sehingga Anda dapat menjalankan dan mengedit kode sendiri.'
