--- a/_pages/books.html
+++ b/_pages/books.html
@@ -13,7 +13,7 @@ header:
 excerpt:
   Displays all documents grouped by a specific collection.
 feature_row:
-  - image_path: /assets/images/algoritma-book.png
+  - image_path: "<img height="480" width="320" src="/assets/images/algoritma-book.png">"
     alt: "customizable"
     title: "Logika dan Algoritma"
     excerpt: "Logika adalah bentuk penalaran atau pemikiran, sedangkan Algoritma adalah suatu urutan dari barisan langkah-langkah atau instruksi untuk menyelesaikan suatu masalah."
