--- a/_pages/books.html
+++ b/_pages/books.html
@@ -30,3 +30,13 @@ feature_row:
 ---
 
 {% include feature_row %}
+
+<div class="features alignc">
+  <div class="row margin2">
+    <div class="col-xs-12 col-lg-8 col-lg-push-2">
+      <a data-fancybox href="https://www.youtube.com/embed/5wAyS1e_hOo?rel=0&amp;showinfo=0">
+        <img src="/assets/images/algoritma-book.png" style="width: 320; height: 480;">
+      </a>
+    </div>
+  </div>
+</div>
