--- a/_pages/books.html
+++ b/_pages/books.html
@@ -37,6 +37,8 @@ feature_row:
       <a data-fancybox href="https://www.youtube.com/embed/5wAyS1e_hOo?rel=0&amp;showinfo=0">
         <img src="/assets/images/algoritma-book.png" style="width: 320; height: 480;">
       </a>
+      <h2>Logika dan Algoritma</h2>
+      <span>Logika adalah bentuk penalaran atau pemikiran, sedangkan Algoritma adalah suatu urutan dari barisan langkah-langkah atau instruksi untuk menyelesaikan suatu masalah.</span>
     </div>
   </div>
 </div>
