--- a/_pages/books.html
+++ b/_pages/books.html
@@ -20,6 +20,27 @@ feature_row:
     url: "/algoritma/logika-algoritma/"
     btn_class: "btn--primary"
     btn_label: "Learn More"
+  - image_path: /assets/images/algoritma-book.png
+    alt: "customizable"
+    title: "Logika dan Algoritma"
+    excerpt: "Logika adalah bentuk penalaran atau pemikiran, sedangkan Algoritma adalah suatu urutan dari barisan langkah-langkah atau instruksi untuk menyelesaikan suatu masalah."
+    url: "/algoritma/logika-algoritma/"
+    btn_class: "btn--primary"
+    btn_label: "Learn More"
+  - image_path: /assets/images/algoritma-book.png
+    alt: "customizable"
+    title: "Logika dan Algoritma"
+    excerpt: "Logika adalah bentuk penalaran atau pemikiran, sedangkan Algoritma adalah suatu urutan dari barisan langkah-langkah atau instruksi untuk menyelesaikan suatu masalah."
+    url: "/algoritma/logika-algoritma/"
+    btn_class: "btn--primary"
+    btn_label: "Learn More"
+  - image_path: /assets/images/algoritma-book.png
+    alt: "customizable"
+    title: "Logika dan Algoritma"
+    excerpt: "Logika adalah bentuk penalaran atau pemikiran, sedangkan Algoritma adalah suatu urutan dari barisan langkah-langkah atau instruksi untuk menyelesaikan suatu masalah."
+    url: "/algoritma/logika-algoritma/"
+    btn_class: "btn--primary"
+    btn_label: "Learn More"
   - image_path: /assets/images/python-book.jpg
     alt: "Python"
     title: "Learn Python Basic"
@@ -30,17 +51,3 @@ feature_row:
 ---
 
 {% include feature_row %}
-
-<div class="features alignc">
-  <div class="row margin2">
-    <div class="col-xs-12 col-lg-8 col-lg-push-2">
-      <a data-fancybox href="https://www.youtube.com/embed/5wAyS1e_hOo?rel=0&amp;showinfo=0">
-        <img src="/assets/images/algoritma-book.png" style="width: 320; height: 480;">
-      </a>
-      <div class="row">
-        <h2>Logika dan Algoritma</h2>
-        <span>Logika adalah bentuk penalaran atau pemikiran, sedangkan Algoritma adalah suatu urutan dari barisan langkah-langkah atau instruksi untuk menyelesaikan suatu masalah.</span>
-      </div>
-    </div>
-  </div>
-</div>
